2003-09-14  Bruno Haible  <bruno@clisp.org>

	* windows/gettextlib.def: Export fwriteerror.

2003-09-13  Bruno Haible  <bruno@clisp.org>

	* windows/gettextlib.def: Export close_stdout.

2003-09-09  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Don't test for putc_unlocked.

2003-08-31  Bruno Haible  <bruno@clisp.org>

	* windows/gettextsrc.def: Add formatstring_sh.

2003-08-29  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (config.h.msvc): Define HAVE_DECL__SNPRINTF,
	HAVE_DECL__SNWPRINTF.

2003-08-24  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Define DLL_VARIABLE in config.h through AH_BOTTOM.

2003-08-24  Bruno Haible  <bruno@clisp.org>

	* windows/gettextsrc.def: Add formatstring_gcc_internal,
	formatstring_perl, formatstring_perl_brace to the export list.

2003-08-24  Bruno Haible  <bruno@clisp.org>

	* windows/gettextpo.def: New file.
	* windows/gettextpo.rc: New file.
	* Makefile.am (EXTRA_DIST): Add them.

2003-08-23  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (config.h_vms): Define HAVE_BTOWC, HAVE_DECL_GETENV,
	HAVE_MBSTATE_T, HAVE_READLINK, HAVE_WCSLEN, HAVE_WINT_T, HAVE_WPRINTF.
	(config.h.msvc): Define .HAVE_BTOWC, HAVE_DECL_GETENV, HAVE_WCSLEN,
	HAVE_WINT_T, HAVE_WPRINTF.

2003-08-23  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Invoke gl_USE_SYSTEM_EXTENSIONS.

2003-08-23  Bruno Haible  <bruno@clisp.org>

	* windows/fnmatch.h: Include fnmatch_.h.

2003-08-23  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Invoke AM_STDBOOL_H instead of gt_STDBOOL_H.
	Invoke gl_FUNC_FNMATCH_POSIX instead of gt_FUNC_FNMATCH.
	Invoke gl_MBSWIDTH instead of jm_PREREQ_MBSWIDTH.

2003-07-01  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Invoke gl_FUNC_READLINK.

2003-07-01  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (windows/stdbool.h): Use stdbool_.h instead of
	stdbool.h.in.

2003-06-19  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Invoke gt_LOCALE_FR.

2003-06-08  Bruno Haible  <bruno@clisp.org>
